@@ -94,7 +94,7 @@ public class TestGetArgumentBuilder
             {
                 getIntegerParam(),
                 "myComplexKeyCollectionId",
-                new Integer(123),
+                Integer.valueOf(123),
                 new IntegerDataSchema()
             },
             {
@@ -119,7 +119,7 @@ public class TestGetArgumentBuilder
             {
                 complexResourceKeyParam,
                 "complexKeyTestId",
-                new ComplexResourceKey<MyComplexKey, EmptyRecord>(
+                new ComplexResourceKey<>(
                     new MyComplexKey().setA("keyString").setB(1234L), new EmptyRecord()),
                 null
             }
@@ -243,7 +243,7 @@ public class TestGetArgumentBuilder
       throws IOException
   {
     String keyName = "myComplexKeyCollectionId";
-    Object keyValue = new Integer(123);
+    Object keyValue = Integer.valueOf(123);
     DataSchema keySchema = new IntegerDataSchema();
     Key key = new Key(keyName, keyValue.getClass(), keySchema);
 
@@ -267,10 +267,10 @@ public class TestGetArgumentBuilder
       throws IOException
   {
     String keyName = "myComplexKeyCollectionId";
-    Object keyValue = new Integer(123);
+    Object keyValue = Integer.valueOf(123);
     DataSchema keySchema = new IntegerDataSchema();
     Key key = new Key(keyName, keyValue.getClass(), keySchema);
-    Map<String, String> headers = new HashMap<String, String>();
+    Map<String, String> headers = new HashMap<>();
     String headerString = "An extra string.";
     headers.put("extra", headerString);
     List<Parameter<?>> headerParams = new ArrayList<>();
